(Subversion).
* Added a fix for Windows users. Fixes: http://code.google.com/p/pyrrd/issues/detail?id=1
* Cleaned up the backend module a tiny bit.
* White space cleanup.
* Added a fix for named parameters in the DataSource class. 
  Fixes: http://code.google.com/p/pyrrd/issues/detail?id=2
* Added Google Code to the admin push script.
* Fixed missing named parameter in RRA class.

2008.04.11

* Moved sandbox.
* Created admin directory.
* Moved stat script into admin directory.
* Added commit script.
* Fixed date in ChangeLog.
* Commented out sync code in commit.sh.
* Renamed lib directory to pyrrd for easier use with non-installed
environments.
* Incremented micro version number.
* Added test runner.
* Fixed bad unit test result in pyrrd.utils.
* Adjusted stat.sh script.
* Updated setup.py.
* Updated date in LICENSE.
* Updated vars in example 1.
* Fixed var names in rrd.external.
* Renamed generateResultLines to iterParse and added some unit tests.
* Cleaned up testmod call.
* Cleaned up vars in rrd and graph modules.
* Fixed example1 to accord with var name changes.
* Fixed a missed var in rrd.DataSource, a test in graph, and updated example2.
* Updated example3.
* Updated example4.
* Updated example5.
* Updated TODO, based on email feedback from Markus Juenemann.

2006.01.29

* Added code to example5.py for generating RRD files and graphs from the
sample data.
* Updated the commends in example5.py and extended the 3-day archive to a
7-day archive.
* Corrected the vname in cdef1 of example5.py.

2006.01.28

* Added a couple doctests to the utils module.
* Added template support to rrd.RRD.update().
* Added a data file for the 5th example.
* Extended the flexibility of rrd.RRD.bufferValue() such that it can now take
a single parameter, and if so, that parameter will be considered a "data
chunk", i.e., a group of one or more time:data strings.
* Added missing step attribute in rrd.RRD.__init__().

2006.01.24

* Setup all graph.Graph parameters to be initialized.