@@ -2,3 +2,5 @@
 * Add a DS collection class that has a get() method for getting a
 particular DS by name.
 * Finish support for fetch().
+* Add support for rrdtool info
+* Add test runner for doctests
