@@ -10,6 +10,10 @@
   Fixes: http://code.google.com/p/pyrrd/issues/detail?id=2
 * Added Google Code to the admin push script.
 * Fixed missing named parameter in RRA class.
+* Fixed missing named parameter in RRD class.
+* Added a NotImplementedError for the fetch method.
+* Updated TODO.
+* Added missing named parameters in VariableDefinition class.
 
 2008.04.11
 
